<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:letterSpacing="0.04"
                android:text="@string/sign_up_please"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/ivUserImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivUserImage"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/circle_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:letterSpacing="0.04"
                android:text="@string/upload_image"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />

            <LinearLayout
                android:id="@+id/llUserSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26.dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome">

                <TextView
                    android:id="@+id/tvSelectionOfUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="26dp"
                    android:letterSpacing="0.04"
                    android:text="@string/select_user_type"
                    android:textColor="@color/HardBlue"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbContractor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:button="@drawable/custom_radio_button"
                        android:checked="false"
                        android:text="@string/boss"
                        android:textColor="@color/HardBlue"
                        android:textStyle="bold"
                        app:useMaterialThemeColors="false" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/rbClient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:button="@drawable/custom_radio_button"
                        android:checked="true"
                        android:text="@string/employee"
                        android:textColor="@color/HardBlue"
                        android:textStyle="bold"
                        app:useMaterialThemeColors="false" />

                </RadioGroup>


            </LinearLayout>

        <EditText
                android:id="@+id/Edt_Name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="Enter Your Name"
                android:hint="@string/enter_your_name"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:inputType="text"
                android:background="@drawable/edit_text_shape"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="26dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llUserSelection"
                 />

            <EditText
                android:id="@+id/Edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="Enter Your Name"
                android:hint="@string/enter_your_email"
                android:gravity="center_horizontal"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Edt_Name"
                 />

            <EditText
                android:id="@+id/Edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="Enter Your Password"
                android:hint="@string/enter_your_password"
                android:gravity="center_horizontal"
                android:inputType="textWebPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Edt_email"
                />

            <EditText
                android:id="@+id/Edt_confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="Confirm Your Password"
                android:hint="@string/confirm_your_password"
                android:gravity="center_horizontal"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Edt_password"
                 />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                app:cornerRadius="@dimen/_5sdp"
                android:text="@string/register"
                android:textSize="20sp"
                android:backgroundTint="@color/HardBlue"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/Edt_confirm_pass"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_hava_an_account"
                    android:textColor="@color/Light1"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/txt_SignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/HardBlue"
                    android:textStyle="bold"
                    />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>