<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.SignInActivity">


    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login_please"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/HardBlue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/login_img"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/login_img"
        app:layout_constraintTop_toBottomOf="@+id/login_txt"/>

    <EditText
        android:id="@+id/login_Edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Enter Your email"
        android:hint="@string/enter_your_email"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_img"
        />
    <EditText
        android:id="@+id/login_Edt_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Enter Your Password"
        android:hint="Enter your Password"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_Edt_email"
        />

    <TextView
        android:id="@+id/txt_forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_Edt_pass"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/forget_password"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/HardBlue"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/HardBlue"
        android:text="@string/login"
        android:textSize="20sp"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forget_pass"
        app:layout_goneMarginTop="@dimen/_20sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:gravity="center"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/Light1"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            />

        <TextView
            android:id="@+id/txt_Sign_Up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/HardBlue"
            android:textStyle="bold"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>