<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_5sdp"
    android:layout_margin="@dimen/_6sdp">

    <ImageView
        android:id="@+id/DoneImage"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/checkmark"
        />
    <TextView
        android:id="@+id/check_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/account_created"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/DoneImage"
        />
    <TextView
        android:id="@+id/check_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_title"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/_14sdp"
        android:gravity="center_horizontal"
        android:text="@string/please_verify_your_email"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_desc"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:background="@color/HardBlue"
        />


</androidx.constraintlayout.widget.ConstraintLayout>