<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_7sdp"
    app:cardElevation="@dimen/_7sdp"
    app:cardUseCompatPadding="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            >
            <LinearLayout
                android:id="@+id/workStatus"
                android:layout_width="@dimen/_235sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12_12_2024"
                    android:textColor="@color/Light1"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:textColor="#E25F84"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_100sdp"
                    />


            </LinearLayout>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Work Title"
                app:layout_constraintTop_toBottomOf="@id/workStatus"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold"
                android:textColor="@color/HardBlue"
                android:layout_marginTop="@dimen/_5sdp"
                 />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/workLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/work_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_decription"
                android:layout_marginStart="@dimen/_6sdp"
                android:textStyle="bold"
                android:textColor="@color/Medium"
                />
            <TextView
                android:id="@+id/tvWorkDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_6sdp"
                android:textColor="@color/Medium"
                android:text="@string/this_is_the_description_of_the_work"
                />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWorkDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/workLL"
            android:text="@string/unassigned"
            android:backgroundTint="@color/HardBlue"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>